--- a/bus_reseau/bus_reseau.ioc
+++ b/bus_reseau/bus_reseau.ioc
@@ -2,17 +2,25 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+CAN1.BS1=CAN_BS1_11TQ
+CAN1.BS2=CAN_BS2_2TQ
+CAN1.CalculateBaudRate=500000
+CAN1.CalculateTimeBit=2000
+CAN1.CalculateTimeQuantum=142.85714285714286
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
+CAN1.Prescaler=6
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP0=CAN1
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -22,7 +30,9 @@ Mcu.Pin11=PA14
 Mcu.Pin12=PB3
 Mcu.Pin13=PB6
 Mcu.Pin14=PB7
-Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin15=PB8
+Mcu.Pin16=PB9
+Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
@@ -31,7 +41,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA9
 Mcu.Pin9=PA10
-Mcu.PinsNb=16
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -85,6 +95,12 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB8.Locked=true
+PB8.Mode=CAN_Activate
+PB8.Signal=CAN1_RX
+PB9.Locked=true
+PB9.Mode=CAN_Activate
+PB9.Signal=CAN1_TX
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
